FLEX/bin/parsermet_yac.output
Gramática

    0 $accept: prog $end

    1 prog: NT_DEC NUMERO FX_DEC expr FDX_DEC expr ERROR_DEC NUMERO '}'
    2     | PF_DEC NUMERO FX_DEC expr GX_DEC expr ERROR_DEC NUMERO '}'
    3     | X_DEC NUMERO FX_DEC expr '}'
    4     | NT_DEC ERROR_T
    5     | NT_DEC NUMERO ERROR_T
    6     | NT_DEC NUMERO FX_DEC expr ERROR_T
    7     | NT_DEC NUMERO FX_DEC expr FDX_DEC expr ERROR_DEC ERROR_T
    8     | NT_DEC NUMERO FX_DEC expr FDX_DEC expr ERROR_DEC NUMERO ERROR_T
    9     | ERROR_T

   10 expr: expr '+' term
   11     | expr '-' term
   12     | term

   13 term: term '*' factor
   14     | term '/' factor
   15     | term '^' factor
   16     | factor

   17 factor: NUMERO
   18       | sig X
   19       | sig EULER
   20       | sig PI
   21       | sig '(' expr ')'
   22       | sig SIN '(' expr ')'
   23       | sig COS '(' expr ')'
   24       | sig TAN '(' expr ')'
   25       | sig COSEC '(' expr ')'
   26       | sig SEC '(' expr ')'
   27       | sig COT '(' expr ')'
   28       | sig ASIN '(' expr ')'
   29       | sig ACOS '(' expr ')'
   30       | sig ATAN '(' expr ')'
   31       | sig SINH '(' expr ')'
   32       | sig COSH '(' expr ')'
   33       | sig TANH '(' expr ')'
   34       | sig LOGE '(' expr ')'
   35       | sig LOG10 '(' expr ')'
   36       | sig EXP '(' expr ')'
   37       | sig RAIZ '(' expr ')'

   38 sig: '+'
   39    | '-'
   40    | /* vacío */


Terminales con las reglas donde aparecen

$end (0) 0
'(' (40) 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
')' (41) 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
'*' (42) 13
'+' (43) 10 38
'-' (45) 11 39
'/' (47) 14
'^' (94) 15
'}' (125) 1 2 3
error (256)
NUMERO (258) 1 2 3 5 6 7 8 17
X (259) 18
EULER (260) 19
PI (261) 20
SIN (262) 22
COS (263) 23
TAN (264) 24
SEC (265) 26
COSEC (266) 25
COT (267) 27
ASIN (268) 28
ACOS (269) 29
ATAN (270) 30
SINH (271) 31
COSH (272) 32
TANH (273) 33
LOG10 (274) 35
LOGE (275) 34
EXP (276) 36
RAIZ (277) 37
NT_DEC (278) 1 4 5 6 7 8
PF_DEC (279) 2
X_DEC (280) 3
FX_DEC (281) 1 2 3 6 7 8
FDX_DEC (282) 1 7 8
GX_DEC (283) 2
ERROR_DEC (284) 1 2 7 8
ERROR_T (285) 4 5 6 7 8 9


No terminales con las reglas donde aparecen

$accept (39)
    en la izquierda: 0
prog (40)
    en la izquierda: 1 2 3 4 5 6 7 8 9, en la derecha: 0
expr (41)
    en la izquierda: 10 11 12, en la derecha: 1 2 3 6 7 8 10 11 21
    22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
term (42)
    en la izquierda: 13 14 15 16, en la derecha: 10 11 12 13 14 15
factor (43)
    en la izquierda: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32
    33 34 35 36 37, en la derecha: 13 14 15 16
sig (44)
    en la izquierda: 38 39 40, en la derecha: 18 19 20 21 22 23 24
    25 26 27 28 29 30 31 32 33 34 35 36 37


estado 0

    0 $accept: . prog $end

    NT_DEC   desplazar e ir al estado 1
    PF_DEC   desplazar e ir al estado 2
    X_DEC    desplazar e ir al estado 3
    ERROR_T  desplazar e ir al estado 4

    prog  ir al estado 5


estado 1

    1 prog: NT_DEC . NUMERO FX_DEC expr FDX_DEC expr ERROR_DEC NUMERO '}'
    4     | NT_DEC . ERROR_T
    5     | NT_DEC . NUMERO ERROR_T
    6     | NT_DEC . NUMERO FX_DEC expr ERROR_T
    7     | NT_DEC . NUMERO FX_DEC expr FDX_DEC expr ERROR_DEC ERROR_T
    8     | NT_DEC . NUMERO FX_DEC expr FDX_DEC expr ERROR_DEC NUMERO ERROR_T

    NUMERO   desplazar e ir al estado 6
    ERROR_T  desplazar e ir al estado 7


estado 2

    2 prog: PF_DEC . NUMERO FX_DEC expr GX_DEC expr ERROR_DEC NUMERO '}'

    NUMERO  desplazar e ir al estado 8


estado 3

    3 prog: X_DEC . NUMERO FX_DEC expr '}'

    NUMERO  desplazar e ir al estado 9


estado 4

    9 prog: ERROR_T .

    $default  reduce usando la regla 9 (prog)


estado 5

    0 $accept: prog . $end

    $end  desplazar e ir al estado 10


estado 6

    1 prog: NT_DEC NUMERO . FX_DEC expr FDX_DEC expr ERROR_DEC NUMERO '}'
    5     | NT_DEC NUMERO . ERROR_T
    6     | NT_DEC NUMERO . FX_DEC expr ERROR_T
    7     | NT_DEC NUMERO . FX_DEC expr FDX_DEC expr ERROR_DEC ERROR_T
    8     | NT_DEC NUMERO . FX_DEC expr FDX_DEC expr ERROR_DEC NUMERO ERROR_T

    FX_DEC   desplazar e ir al estado 11
    ERROR_T  desplazar e ir al estado 12


estado 7

    4 prog: NT_DEC ERROR_T .

    $default  reduce usando la regla 4 (prog)


estado 8

    2 prog: PF_DEC NUMERO . FX_DEC expr GX_DEC expr ERROR_DEC NUMERO '}'

    FX_DEC  desplazar e ir al estado 13


estado 9

    3 prog: X_DEC NUMERO . FX_DEC expr '}'

    FX_DEC  desplazar e ir al estado 14


estado 10

    0 $accept: prog $end .

    $default  aceptar


estado 11

    1 prog: NT_DEC NUMERO FX_DEC . expr FDX_DEC expr ERROR_DEC NUMERO '}'
    6     | NT_DEC NUMERO FX_DEC . expr ERROR_T
    7     | NT_DEC NUMERO FX_DEC . expr FDX_DEC expr ERROR_DEC ERROR_T
    8     | NT_DEC NUMERO FX_DEC . expr FDX_DEC expr ERROR_DEC NUMERO ERROR_T

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    expr    ir al estado 18
    term    ir al estado 19
    factor  ir al estado 20
    sig     ir al estado 21


estado 12

    5 prog: NT_DEC NUMERO ERROR_T .

    $default  reduce usando la regla 5 (prog)


estado 13

    2 prog: PF_DEC NUMERO FX_DEC . expr GX_DEC expr ERROR_DEC NUMERO '}'

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    expr    ir al estado 22
    term    ir al estado 19
    factor  ir al estado 20
    sig     ir al estado 21


estado 14

    3 prog: X_DEC NUMERO FX_DEC . expr '}'

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    expr    ir al estado 23
    term    ir al estado 19
    factor  ir al estado 20
    sig     ir al estado 21


estado 15

   17 factor: NUMERO .

    $default  reduce usando la regla 17 (factor)


estado 16

   38 sig: '+' .

    $default  reduce usando la regla 38 (sig)


estado 17

   39 sig: '-' .

    $default  reduce usando la regla 39 (sig)


estado 18

    1 prog: NT_DEC NUMERO FX_DEC expr . FDX_DEC expr ERROR_DEC NUMERO '}'
    6     | NT_DEC NUMERO FX_DEC expr . ERROR_T
    7     | NT_DEC NUMERO FX_DEC expr . FDX_DEC expr ERROR_DEC ERROR_T
    8     | NT_DEC NUMERO FX_DEC expr . FDX_DEC expr ERROR_DEC NUMERO ERROR_T
   10 expr: expr . '+' term
   11     | expr . '-' term

    FDX_DEC  desplazar e ir al estado 24
    ERROR_T  desplazar e ir al estado 25
    '+'      desplazar e ir al estado 26
    '-'      desplazar e ir al estado 27


estado 19

   12 expr: term .
   13 term: term . '*' factor
   14     | term . '/' factor
   15     | term . '^' factor

    '*'  desplazar e ir al estado 28
    '/'  desplazar e ir al estado 29
    '^'  desplazar e ir al estado 30

    $default  reduce usando la regla 12 (expr)


estado 20

   16 term: factor .

    $default  reduce usando la regla 16 (term)


estado 21

   18 factor: sig . X
   19       | sig . EULER
   20       | sig . PI
   21       | sig . '(' expr ')'
   22       | sig . SIN '(' expr ')'
   23       | sig . COS '(' expr ')'
   24       | sig . TAN '(' expr ')'
   25       | sig . COSEC '(' expr ')'
   26       | sig . SEC '(' expr ')'
   27       | sig . COT '(' expr ')'
   28       | sig . ASIN '(' expr ')'
   29       | sig . ACOS '(' expr ')'
   30       | sig . ATAN '(' expr ')'
   31       | sig . SINH '(' expr ')'
   32       | sig . COSH '(' expr ')'
   33       | sig . TANH '(' expr ')'
   34       | sig . LOGE '(' expr ')'
   35       | sig . LOG10 '(' expr ')'
   36       | sig . EXP '(' expr ')'
   37       | sig . RAIZ '(' expr ')'

    X      desplazar e ir al estado 31
    EULER  desplazar e ir al estado 32
    PI     desplazar e ir al estado 33
    SIN    desplazar e ir al estado 34
    COS    desplazar e ir al estado 35
    TAN    desplazar e ir al estado 36
    SEC    desplazar e ir al estado 37
    COSEC  desplazar e ir al estado 38
    COT    desplazar e ir al estado 39
    ASIN   desplazar e ir al estado 40
    ACOS   desplazar e ir al estado 41
    ATAN   desplazar e ir al estado 42
    SINH   desplazar e ir al estado 43
    COSH   desplazar e ir al estado 44
    TANH   desplazar e ir al estado 45
    LOG10  desplazar e ir al estado 46
    LOGE   desplazar e ir al estado 47
    EXP    desplazar e ir al estado 48
    RAIZ   desplazar e ir al estado 49
    '('    desplazar e ir al estado 50


estado 22

    2 prog: PF_DEC NUMERO FX_DEC expr . GX_DEC expr ERROR_DEC NUMERO '}'
   10 expr: expr . '+' term
   11     | expr . '-' term

    GX_DEC  desplazar e ir al estado 51
    '+'     desplazar e ir al estado 26
    '-'     desplazar e ir al estado 27


estado 23

    3 prog: X_DEC NUMERO FX_DEC expr . '}'
   10 expr: expr . '+' term
   11     | expr . '-' term

    '+'  desplazar e ir al estado 26
    '-'  desplazar e ir al estado 27
    '}'  desplazar e ir al estado 52


estado 24

    1 prog: NT_DEC NUMERO FX_DEC expr FDX_DEC . expr ERROR_DEC NUMERO '}'
    7     | NT_DEC NUMERO FX_DEC expr FDX_DEC . expr ERROR_DEC ERROR_T
    8     | NT_DEC NUMERO FX_DEC expr FDX_DEC . expr ERROR_DEC NUMERO ERROR_T

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    expr    ir al estado 53
    term    ir al estado 19
    factor  ir al estado 20
    sig     ir al estado 21


estado 25

    6 prog: NT_DEC NUMERO FX_DEC expr ERROR_T .

    $default  reduce usando la regla 6 (prog)


estado 26

   10 expr: expr '+' . term

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    term    ir al estado 54
    factor  ir al estado 20
    sig     ir al estado 21


estado 27

   11 expr: expr '-' . term

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    term    ir al estado 55
    factor  ir al estado 20
    sig     ir al estado 21


estado 28

   13 term: term '*' . factor

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    factor  ir al estado 56
    sig     ir al estado 21


estado 29

   14 term: term '/' . factor

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    factor  ir al estado 57
    sig     ir al estado 21


estado 30

   15 term: term '^' . factor

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    factor  ir al estado 58
    sig     ir al estado 21


estado 31

   18 factor: sig X .

    $default  reduce usando la regla 18 (factor)


estado 32

   19 factor: sig EULER .

    $default  reduce usando la regla 19 (factor)


estado 33

   20 factor: sig PI .

    $default  reduce usando la regla 20 (factor)


estado 34

   22 factor: sig SIN . '(' expr ')'

    '('  desplazar e ir al estado 59


estado 35

   23 factor: sig COS . '(' expr ')'

    '('  desplazar e ir al estado 60


estado 36

   24 factor: sig TAN . '(' expr ')'

    '('  desplazar e ir al estado 61


estado 37

   26 factor: sig SEC . '(' expr ')'

    '('  desplazar e ir al estado 62


estado 38

   25 factor: sig COSEC . '(' expr ')'

    '('  desplazar e ir al estado 63


estado 39

   27 factor: sig COT . '(' expr ')'

    '('  desplazar e ir al estado 64


estado 40

   28 factor: sig ASIN . '(' expr ')'

    '('  desplazar e ir al estado 65


estado 41

   29 factor: sig ACOS . '(' expr ')'

    '('  desplazar e ir al estado 66


estado 42

   30 factor: sig ATAN . '(' expr ')'

    '('  desplazar e ir al estado 67


estado 43

   31 factor: sig SINH . '(' expr ')'

    '('  desplazar e ir al estado 68


estado 44

   32 factor: sig COSH . '(' expr ')'

    '('  desplazar e ir al estado 69


estado 45

   33 factor: sig TANH . '(' expr ')'

    '('  desplazar e ir al estado 70


estado 46

   35 factor: sig LOG10 . '(' expr ')'

    '('  desplazar e ir al estado 71


estado 47

   34 factor: sig LOGE . '(' expr ')'

    '('  desplazar e ir al estado 72


estado 48

   36 factor: sig EXP . '(' expr ')'

    '('  desplazar e ir al estado 73


estado 49

   37 factor: sig RAIZ . '(' expr ')'

    '('  desplazar e ir al estado 74


estado 50

   21 factor: sig '(' . expr ')'

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    expr    ir al estado 75
    term    ir al estado 19
    factor  ir al estado 20
    sig     ir al estado 21


estado 51

    2 prog: PF_DEC NUMERO FX_DEC expr GX_DEC . expr ERROR_DEC NUMERO '}'

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    expr    ir al estado 76
    term    ir al estado 19
    factor  ir al estado 20
    sig     ir al estado 21


estado 52

    3 prog: X_DEC NUMERO FX_DEC expr '}' .

    $default  reduce usando la regla 3 (prog)


estado 53

    1 prog: NT_DEC NUMERO FX_DEC expr FDX_DEC expr . ERROR_DEC NUMERO '}'
    7     | NT_DEC NUMERO FX_DEC expr FDX_DEC expr . ERROR_DEC ERROR_T
    8     | NT_DEC NUMERO FX_DEC expr FDX_DEC expr . ERROR_DEC NUMERO ERROR_T
   10 expr: expr . '+' term
   11     | expr . '-' term

    ERROR_DEC  desplazar e ir al estado 77
    '+'        desplazar e ir al estado 26
    '-'        desplazar e ir al estado 27


estado 54

   10 expr: expr '+' term .
   13 term: term . '*' factor
   14     | term . '/' factor
   15     | term . '^' factor

    '*'  desplazar e ir al estado 28
    '/'  desplazar e ir al estado 29
    '^'  desplazar e ir al estado 30

    $default  reduce usando la regla 10 (expr)


estado 55

   11 expr: expr '-' term .
   13 term: term . '*' factor
   14     | term . '/' factor
   15     | term . '^' factor

    '*'  desplazar e ir al estado 28
    '/'  desplazar e ir al estado 29
    '^'  desplazar e ir al estado 30

    $default  reduce usando la regla 11 (expr)


estado 56

   13 term: term '*' factor .

    $default  reduce usando la regla 13 (term)


estado 57

   14 term: term '/' factor .

    $default  reduce usando la regla 14 (term)


estado 58

   15 term: term '^' factor .

    $default  reduce usando la regla 15 (term)


estado 59

   22 factor: sig SIN '(' . expr ')'

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    expr    ir al estado 78
    term    ir al estado 19
    factor  ir al estado 20
    sig     ir al estado 21


estado 60

   23 factor: sig COS '(' . expr ')'

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    expr    ir al estado 79
    term    ir al estado 19
    factor  ir al estado 20
    sig     ir al estado 21


estado 61

   24 factor: sig TAN '(' . expr ')'

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    expr    ir al estado 80
    term    ir al estado 19
    factor  ir al estado 20
    sig     ir al estado 21


estado 62

   26 factor: sig SEC '(' . expr ')'

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    expr    ir al estado 81
    term    ir al estado 19
    factor  ir al estado 20
    sig     ir al estado 21


estado 63

   25 factor: sig COSEC '(' . expr ')'

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    expr    ir al estado 82
    term    ir al estado 19
    factor  ir al estado 20
    sig     ir al estado 21


estado 64

   27 factor: sig COT '(' . expr ')'

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    expr    ir al estado 83
    term    ir al estado 19
    factor  ir al estado 20
    sig     ir al estado 21


estado 65

   28 factor: sig ASIN '(' . expr ')'

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    expr    ir al estado 84
    term    ir al estado 19
    factor  ir al estado 20
    sig     ir al estado 21


estado 66

   29 factor: sig ACOS '(' . expr ')'

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    expr    ir al estado 85
    term    ir al estado 19
    factor  ir al estado 20
    sig     ir al estado 21


estado 67

   30 factor: sig ATAN '(' . expr ')'

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    expr    ir al estado 86
    term    ir al estado 19
    factor  ir al estado 20
    sig     ir al estado 21


estado 68

   31 factor: sig SINH '(' . expr ')'

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    expr    ir al estado 87
    term    ir al estado 19
    factor  ir al estado 20
    sig     ir al estado 21


estado 69

   32 factor: sig COSH '(' . expr ')'

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    expr    ir al estado 88
    term    ir al estado 19
    factor  ir al estado 20
    sig     ir al estado 21


estado 70

   33 factor: sig TANH '(' . expr ')'

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    expr    ir al estado 89
    term    ir al estado 19
    factor  ir al estado 20
    sig     ir al estado 21


estado 71

   35 factor: sig LOG10 '(' . expr ')'

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    expr    ir al estado 90
    term    ir al estado 19
    factor  ir al estado 20
    sig     ir al estado 21


estado 72

   34 factor: sig LOGE '(' . expr ')'

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    expr    ir al estado 91
    term    ir al estado 19
    factor  ir al estado 20
    sig     ir al estado 21


estado 73

   36 factor: sig EXP '(' . expr ')'

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    expr    ir al estado 92
    term    ir al estado 19
    factor  ir al estado 20
    sig     ir al estado 21


estado 74

   37 factor: sig RAIZ '(' . expr ')'

    NUMERO  desplazar e ir al estado 15
    '+'     desplazar e ir al estado 16
    '-'     desplazar e ir al estado 17

    $default  reduce usando la regla 40 (sig)

    expr    ir al estado 93
    term    ir al estado 19
    factor  ir al estado 20
    sig     ir al estado 21


estado 75

   10 expr: expr . '+' term
   11     | expr . '-' term
   21 factor: sig '(' expr . ')'

    '+'  desplazar e ir al estado 26
    '-'  desplazar e ir al estado 27
    ')'  desplazar e ir al estado 94


estado 76

    2 prog: PF_DEC NUMERO FX_DEC expr GX_DEC expr . ERROR_DEC NUMERO '}'
   10 expr: expr . '+' term
   11     | expr . '-' term

    ERROR_DEC  desplazar e ir al estado 95
    '+'        desplazar e ir al estado 26
    '-'        desplazar e ir al estado 27


estado 77

    1 prog: NT_DEC NUMERO FX_DEC expr FDX_DEC expr ERROR_DEC . NUMERO '}'
    7     | NT_DEC NUMERO FX_DEC expr FDX_DEC expr ERROR_DEC . ERROR_T
    8     | NT_DEC NUMERO FX_DEC expr FDX_DEC expr ERROR_DEC . NUMERO ERROR_T

    NUMERO   desplazar e ir al estado 96
    ERROR_T  desplazar e ir al estado 97


estado 78

   10 expr: expr . '+' term
   11     | expr . '-' term
   22 factor: sig SIN '(' expr . ')'

    '+'  desplazar e ir al estado 26
    '-'  desplazar e ir al estado 27
    ')'  desplazar e ir al estado 98


estado 79

   10 expr: expr . '+' term
   11     | expr . '-' term
   23 factor: sig COS '(' expr . ')'

    '+'  desplazar e ir al estado 26
    '-'  desplazar e ir al estado 27
    ')'  desplazar e ir al estado 99


estado 80

   10 expr: expr . '+' term
   11     | expr . '-' term
   24 factor: sig TAN '(' expr . ')'

    '+'  desplazar e ir al estado 26
    '-'  desplazar e ir al estado 27
    ')'  desplazar e ir al estado 100


estado 81

   10 expr: expr . '+' term
   11     | expr . '-' term
   26 factor: sig SEC '(' expr . ')'

    '+'  desplazar e ir al estado 26
    '-'  desplazar e ir al estado 27
    ')'  desplazar e ir al estado 101


estado 82

   10 expr: expr . '+' term
   11     | expr . '-' term
   25 factor: sig COSEC '(' expr . ')'

    '+'  desplazar e ir al estado 26
    '-'  desplazar e ir al estado 27
    ')'  desplazar e ir al estado 102


estado 83

   10 expr: expr . '+' term
   11     | expr . '-' term
   27 factor: sig COT '(' expr . ')'

    '+'  desplazar e ir al estado 26
    '-'  desplazar e ir al estado 27
    ')'  desplazar e ir al estado 103


estado 84

   10 expr: expr . '+' term
   11     | expr . '-' term
   28 factor: sig ASIN '(' expr . ')'

    '+'  desplazar e ir al estado 26
    '-'  desplazar e ir al estado 27
    ')'  desplazar e ir al estado 104


estado 85

   10 expr: expr . '+' term
   11     | expr . '-' term
   29 factor: sig ACOS '(' expr . ')'

    '+'  desplazar e ir al estado 26
    '-'  desplazar e ir al estado 27
    ')'  desplazar e ir al estado 105


estado 86

   10 expr: expr . '+' term
   11     | expr . '-' term
   30 factor: sig ATAN '(' expr . ')'
